add field hasil_diagnosis for json api request
